--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.21.1",
     "cookies": "^0.8.0",
     "esri-leaflet-geocoder": "^3.1.2",
+    "firebase": "^9.8.1",
     "js-cookie": "^2.2.1",
     "jwt-decode": "^3.1.2",
     "leaflet": "^1.7.1",
@@ -23,6 +24,7 @@
     "react": "^17.0.2",
     "react-countdown-circle-timer": "^2.5.1",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
     "react-leaflet": "^3.2.5",
