--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.3",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "swr": "^0.5.5",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
