--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "antd": "^4.15.1",
     "antd-img-crop": "^3.14.1",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "cookies": "^0.8.0",
     "esri-leaflet-geocoder": "^3.1.2",
     "firebase": "^9.8.1",
