--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "add": "^2.0.6",
     "antd": "^4.15.1",
     "antd-img-crop": "^3.14.1",
     "axios": "^0.21.1",
@@ -28,6 +29,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.17.5",
     "react-icons": "^4.2.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^3.2.5",
     "react-leaflet-search": "^2.0.1",
     "react-leaflet-zoom-indicator": "^0.1.2",
@@ -41,6 +43,7 @@
     "swr": "^0.5.5",
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1",
+    "yarn": "^1.22.18",
     "yup": "^0.32.11"
   },
   "scripts": {
